--- a/index.html
+++ b/index.html
@@ -65,34 +65,8 @@
         </p>
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
-        <ul>
+        <p>No meeting scheduled for July. Fall schedule to be announced.</p>
 
-          <li>
-            <h3>
-              May 2022: Eloquent JavaScipt book club
-            </h3>
-            <ul>
-              <li>Tuesday, May 17, 2022, 3:00 PM - 4:00 PM</li>
-            </ul>
-          </li>
-          <li>
-            <h3>
-              June 2022: UW front-end tech survey results
-            </h3>
-            <ul>
-              <li>Tuesday, June 21, 2022, 3:00 PM - 4:00 PM</li>
-            </ul>
-          </li>
-          <li>
-            <h3>
-              July 2022: UX and Design Thinking community of practice
-            </h3>
-            <p>We will join the UX and Design Thinking CoP for their quarterly session: </p>
-            <ul>
-              <li>Tuesday, July 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
-            </ul>
-          </li>
-        </ul>
         <p id="zoom-note">
           * For Zoom meeting information, email
           <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
