--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
 
-        <h3>August 2022</h3>
+        <h3>September 2022</h3>
         <ul>
-          <li>Topic: Lean Coffee-style discussion
+          <li>Topic: Continuing our lean coffee discussion
             <ul>
-              <li>Tuesday, August 16, <strong>2:00 - 2:55 p.m. (note the new 2:00 p.m. start time)</strong></li>
-              <li>Join us for a lean coffee-style open discussion. <strong>Bring any front-end topic</strong> you'd like
-                to
-                discuss to the meeting.</li>
+              <li>Tuesday, September 20th, <strong>2:00 - 2:55 p.m. (note the new 2:00 p.m. start time)</strong></li>
+              <li>This month we will discuss topics that we voted on at August's lean coffee-style discussion session.
+                Last month we had a lively discussion on our top topic choice, but didn't have time to address other
+                subjects of interest like React and study habits of fellow front-end developers. Join us we continue the
+                discussion!</li>
             </ul>
           </li>
         </ul>
