--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
           <li>Topic: Continuing our lean coffee discussion
             <ul>
               <li>Tuesday, September 20th, <strong>2:00 - 2:55 p.m. (note the new 2:00 p.m. start time)</strong></li>
-              <li>This month we will discuss topics that we voted on at August's lean coffee-style discussion session.
+              <li>This month we'll work through topics we voted on at August's lean coffee-style discussion session.
                 Last month we had a lively discussion on our top topic choice, but didn't have time to address other
-                subjects of interest like React and study habits of fellow front-end developers. Join us we continue the
-                discussion!</li>
+                popular
+                subjects of interest like React and study habits of fellow front-end developers. Join us as the
+                discussion continues!</li>
             </ul>
           </li>
         </ul>
