--- a/index.html
+++ b/index.html
@@ -66,16 +66,35 @@
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
 
-        <h3>September 2022</h3>
+        <h3>October 2022</h3>
         <ul>
-          <li>Topic: Continuing our lean coffee discussion
+          <li>Topic: React Essentials
             <ul>
-              <li>Tuesday, September 20th, <strong>2:00 - 3:00 p.m. (note the new 2:00 p.m. start time)</strong></li>
-              <li>This month we'll work through topics we voted on at August's lean coffee-style discussion session.
-                Last month we had a lively discussion on our top topic choice, but didn't have time to address other
-                popular
-                subjects of interest like React and study habits of fellow front-end developers. Join us as the
-                discussion continues!</li>
+              <li>Tuesday, October 18th, <strong>2:00 - 3:00 p.m.</strong></li>
+              <li>
+                <p>Join us for an interactive session of React.js with LinkedIn Learning (<a
+                    href="https://itconnect.uw.edu/tools-services-support/teaching-learning/technology-training/linkedin-learning/">which
+                    we all have access to via UW</a>). We'll be walking through lessons 1 - 3 in the <a
+                    href="https://www.linkedin.com/learning/react-js-essential-training-14836121/">
+                    React.js Essential
+                    Training course
+                  </a>.</p>
+
+                <p>We encourage you to take 30 minutes ahead of the meeting to watch the videos. In our session on
+                  October 18 at 2 p.m., we'll work through each topic together. If you have time, set up your device
+                  ahead of the meeting. No prior React experience needed, but basic familiarity with JavaScript
+                  recommended.</p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <h3>November 2022</h3>
+        <ul>
+          <li>Topic: A look at AngularJS with Monte Aspevig
+            <ul>
+              <li>Tuesday, November 15, <strong>2:00 - 3:00 p.m.</strong></li>
+              <li>Details to come!</li>
             </ul>
           </li>
         </ul>
