--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <ul>
           <li>Topic: React Essentials
             <ul>
-              <li>Tuesday, October 18th, <strong>2:00 - 3:00 p.m.</strong></li>
+              <li>Tuesday, October 18th, 2:00 - 3:00 p.m.</li>
               <li>
-                <p>Join us for an interactive session of React.js with LinkedIn Learning (<a
+                <p>Join us for an interactive session of <strong>React.js with LinkedIn Learning</strong> (<a
                     href="https://itconnect.uw.edu/tools-services-support/teaching-learning/technology-training/linkedin-learning/">which
                     we all have access to via UW</a>). We'll be walking through lessons 1 - 3 in the <a
                     href="https://www.linkedin.com/learning/react-js-essential-training-14836121/">
@@ -80,7 +80,8 @@
                     Training course
                   </a>.</p>
 
-                <p>We encourage you to take 30 minutes ahead of the meeting to watch the videos. In our session on
+                <p><strong>We encourage you to take 30 minutes</strong> ahead of the meeting to watch the videos. In our
+                  session on
                   October 18 at 2 p.m., we'll work through each topic together. If you have time, set up your device
                   ahead of the meeting. No prior React experience needed, but basic familiarity with JavaScript
                   recommended.</p>
@@ -93,7 +94,7 @@
         <ul>
           <li>Topic: A look at AngularJS with Monte Aspevig
             <ul>
-              <li>Tuesday, November 15, <strong>2:00 - 3:00 p.m.</strong></li>
+              <li>Tuesday, November 15, 2:00 - 3:00 p.m.</li>
               <li>Details to come!</li>
             </ul>
           </li>
