--- a/index.html
+++ b/index.html
@@ -66,29 +66,6 @@
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
 
-        <h3>October 2022</h3>
-        <ul>
-          <li>Topic: React Essentials
-            <ul>
-              <li>Tuesday, October 18th, 2:00 - 3:00 p.m.</li>
-              <li>
-                <p>Join us for an interactive session of <strong>React.js with LinkedIn Learning</strong> (<a
-                    href="https://itconnect.uw.edu/tools-services-support/teaching-learning/technology-training/linkedin-learning/">which
-                    we all have access to via UW</a>). We'll be walking through lessons 1 - 3 in the <a
-                    href="https://www.linkedin.com/learning/react-js-essential-training-14836121/">
-                    React.js Essential
-                    Training course
-                  </a>.</p>
-
-                <p><strong>We encourage you to take 30 minutes</strong> ahead of the meeting to watch the videos. In our
-                  session on
-                  October 18 at 2 p.m., we'll work through each topic together. If you have time, set up your device
-                  ahead of the meeting. No prior React experience needed, but basic familiarity with JavaScript
-                  recommended.</p>
-              </li>
-            </ul>
-          </li>
-        </ul>
 
         <h3>November 2022</h3>
         <ul>
@@ -96,6 +73,15 @@
             <ul>
               <li>Tuesday, November 15, 2:00 - 3:00 p.m.</li>
               <li>Details to come!</li>
+            </ul>
+          </li>
+        </ul>
+
+        <h3>December 2022</h3>
+        <ul>
+          <li>We will join the UX and design thinking CoP session
+            <ul>
+              <li>Date to be announced</li>
             </ul>
           </li>
         </ul>
