--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ul>
           <li>Topic: A look at AngularJS with Monte Aspevig
             <ul>
-              <li>Tuesday, November 15, 2:00 - 3:00 p.m.</li>
+              <li>Tuesday, November 15, <strong>3:00 p.m. - 4:00p.m.</strong></li>
               <li>Details to come!</li>
             </ul>
           </li>
@@ -81,7 +81,8 @@
         <ul>
           <li>We will join the UX and design thinking CoP session
             <ul>
-              <li>Date to be announced</li>
+              <li>Topic: Content design</li>
+              <li>Tuesday, December 6th, 2:00 p.m. - 3:00p.m.</li>
             </ul>
           </li>
         </ul>
