adding details for Nov session

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <li>Topic: A look at AngularJS with Monte Aspevig
             <ul>
               <li>Tuesday, November 15, <strong>3:00 p.m. - 4:00p.m.</strong></li>
-              <li>Details to come!</li>
+              <li>Demo will include an SPA configuration using client-side routing and a configuration that allows you
+                to create custom HTML tags.</li>
             </ul>
           </li>
         </ul>
