react study session info up

--- a/index.html
+++ b/index.html
@@ -66,20 +66,49 @@
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
 
-        <h3>December 2022</h3>
+        <h3>January - March 2023: React.js study series</h3>
+
+        Sign up for the Front-End Technologies Community of Practice React.js study series starting the week of January
+        16th.
+
+        <p>
+          Come learn React.js with us! In lieu of regular monthly meetings in January, February and March, we’ll be
+          working our way through the <a
+            href="https://www.linkedin.com/learning/react-js-essential-training-14836121">React.js Essential
+            Training</a> and <a href="https://www.linkedin.com/learning/react-js-building-an-interface-8551484">React.js
+            Building an Interface courses</a> on LinkedIn Learning through biweekly working sessions. As a member of the
+          UW community, you have free access to <a
+            href="https://itconnect.uw.edu/tools-services-support/teaching-learning/technology-training/linkedin-learning/">LinkedIn
+            Learning</a>.
+        </p>
+
+        <p>We have two study group cohorts available. The dates and times are:</p>
+
         <ul>
-          <li>We will join the UX and design thinking CoP session
-            <ul>
-              <li>Topic: Content design</li>
-              <li>Tuesday, December 6th, 2:00 p.m. - 3:00p.m.</li>
-            </ul>
-          </li>
+          <li>Tuesday cohort: 1/17, 1/31, 2/14, 2/28, 3/14</li>
+          <li>Thursday cohort: 1/19, 2/2, 2/16, 3/2, 3/16</li>
+          <li>Both cohorts: Tuesday, March 21</li>
         </ul>
 
-        <p id="zoom-note">
-          * For Zoom meeting information, email
+        <p>Sessions will take place from 2 to 2:50 p.m. via Zoom.</p>
+
+        <p>What else to know:</p>
+
+        <ul>
+          <li>Some JavaScript experience is a bonus, but not required.</li>
+          <li>You'll need to review the videos for a given week’s meeting ahead of time. During the working session,
+            we’ll work through the content together.</li>
+        </ul>
+
+        <p>
+          For registration information, email
           <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
         </p>
+
+        <!-- <p id="zoom-note">
+          * For Zoom meeting information, email
+          <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
+        </p> -->
       </main>
     </div>
     <!-- /uw-container-inner 2 -->
