--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
         <h3>January - March 2023: React.js study series</h3>
 
-        Sign up for the Front-End Technologies Community of Practice React.js study series starting the week of January
+        The Front-End Technologies Community of Practice React.js study series starts the week of January
         16th.
 
         <p>
-          Come learn React.js with us! In lieu of regular monthly meetings in January, February and March, we’ll be
+          In lieu of regular monthly meetings in January, February and March, we’ll be
           working our way through the <a
             href="https://www.linkedin.com/learning/react-js-essential-training-14836121">React.js Essential
             Training</a> and <a href="https://www.linkedin.com/learning/react-js-building-an-interface-8551484">React.js
@@ -82,28 +82,11 @@
             Learning</a>.
         </p>
 
-        <p>We have two study group cohorts available. The dates and times are:</p>
-
-        <ul>
-          <li>Tuesday cohort: 1/17, 1/31, 2/14, 2/28, 3/14</li>
-          <li>Thursday cohort: 1/19, 2/2, 2/16, 3/2, 3/16</li>
-          <li>Both cohorts: Tuesday, March 21</li>
-        </ul>
-
-        <p>Sessions will take place from 2 to 2:50 p.m. via Zoom.</p>
-
-        <p>What else to know:</p>
-
-        <ul>
-          <li>Some JavaScript experience is a bonus, but not required.</li>
-          <li>You'll need to review the videos for a given week’s meeting ahead of time. During the working session,
-            we’ll work through the content together.</li>
-        </ul>
-
         <p>
-          For registration information, email
+          Both study group cohorts are full but if you would like to be added to the waitlist, email frontend@uw.edu.
           <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
         </p>
+
 
         <!-- <p id="zoom-note">
           * For Zoom meeting information, email
