--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </p>
 
         <p>
-          Both study group cohorts are full but if you would like to be added to the waitlist, email frontend@uw.edu.
+          Both study group cohorts are full but if you would like to be added to the waitlist, email
           <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
         </p>
 
