--- a/index.html
+++ b/index.html
@@ -1,102 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>UW Front-end Technologies Community of Practice</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="css/styles.css" />
-</head>
-
-<body>
-  <div class="uw-container">
-    <header class="uw-thinstrip" role="banner">
-      <div class="uw-container--inner">
-        <div class="uw-thinstrip_container">
-          <a class="uw-patch" title="University of Washington Home" href="http://uw.edu">University of Washington</a>
-          <a aria-hidden="true" class="uw-wordmark" href="http://uw.edu">University of Washington</a>
-        </div>
-        <!--
-            placeholder for future nav if needed
-            <nav class="uw-thinstrip_nav" role="navigation" aria-label="Site navigation">
-                <ul class="elem-list">
-                    <li class="elem-item">
-                        <a href="http://myuw.washington.edu" class="elem-link">MyUW</a>
-                    </li>
-
-                    <li class="elem-item">
-                        <a href="http://uw.edu/calendar" class="elem-link">Calendar</a>
-                    </li>
-
-                    <li class="elem-item">
-                        <a href="http://uw.edu/maps"  class="elem-link">Maps</a>
-                    </li>
-
-                    <li class="elem-item">
-                        <a href="http://uw.edu/directory" class="elem-link">Directories</a>
-                    </li>
-                </ul>
-            </nav>
-          -->
-      </div>
-      <!-- /uw-container-inner 1 -->
-    </header>
-
-    <div class="uw-container--inner">
-      <main class="uw-content" role="main" aria-labelledby="uwid-pageheading">
-        <h1 id="uwid-pageheading">
-          UW Front-end Technologies
-          <span class="elem-title--sub">Community of Practice</span>
-        </h1>
-
-        <p>
-          We share knowledge around front-end Web development and
-          technologies. Meeting topics will include JavaScript/CSS/HTML5
-          coding techniques, JavaScript/CSS frameworks, CSS preprocessors,
-          code editors, living style guides, linters and task management build
-          tools. Accessibility, optimization, and responsive design are common
-          themes.
-        </p>
-        <p>
-          For more information, email
-          <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
-        </p>
-        <hr class="uw-divider" />
-        <h2>Meeting schedule</h2>
-
-        <h3>January - March 2023: React.js study series</h3>
-
-        The Front-End Technologies Community of Practice React.js study series starts the week of January
-        16th.
-
-        <p>
-          In lieu of regular monthly meetings in January, February and March, we’ll be
-          working our way through the <a
-            href="https://www.linkedin.com/learning/react-js-essential-training-14836121">React.js Essential
-            Training</a> and <a href="https://www.linkedin.com/learning/react-js-building-an-interface-8551484">React.js
-            Building an Interface courses</a> on LinkedIn Learning through biweekly working sessions. As a member of the
-          UW community, you have free access to <a
-            href="https://itconnect.uw.edu/tools-services-support/teaching-learning/technology-training/linkedin-learning/">LinkedIn
-            Learning</a>.
-        </p>
-
-        <p>
-          Both study group cohorts are full but if you would like to be added to the waitlist, email
-          <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
-        </p>
-
-
-        <!-- <p id="zoom-note">
-          * For Zoom meeting information, email
-          <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
-        </p> -->
-      </main>
-    </div>
-    <!-- /uw-container-inner 2 -->
-  </div>
-  <!-- /uw-container -->
-</body>
-
-</html>
+<h1>Front-end Tech Community of Practice</h1>
+<p>Please see our new web site: https://sites.uw.edu/frontend/</p>
