took out too much

--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<h1>Front-end Tech Community of Practice</h1>
-<p>Please see our new web site: https://sites.uw.edu/frontend/</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>UW Front-end Technologies Community of Practice</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+
+<body>
+  <main>
+    <h1>Front-end Tech Community of Practice</h1>
+    <p>Please see our new web site: https://sites.uw.edu/frontend/</p>
+  </main>
+</body>
+
+</html>
