--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <h1>Front-end Tech Community of Practice</h1>
-    <p>Please see our new web site: https://sites.uw.edu/frontend/</p>
+    <p>Please visit our new web site: <a href="https://sites.uw.edu/frontend/">https://sites.uw.edu/frontend/</a></p>
   </main>
 </body>
 
